--- a/public/ask.html
+++ b/public/ask.html
@@ -53,7 +53,7 @@
 
   <!-- Voice Button Positioned in the Bottom-Right Corner -->
   <button id="askButton">
-    <img src="voicebot.png" alt="Ask Me Anything" width="60" height="60">
+    <img src="https://png.pngtree.com/png-vector/20220611/ourmid/pngtree-smiling-cute-robot-chat-bot-in-speech-bubble-png-image_5008700.png" alt="Ask Me Anything" width="60" height="60">
   </button>
 
   <!-- Chat Box -->
