--- a/public/ask.html
+++ b/public/ask.html
@@ -5,58 +5,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ask Me Anything</title>
   <style>
-    /* Button Styling */
     #askButton {
       position: fixed;
       bottom: 20px;
       right: 20px;
-      width: 75px;
-      height: 75px;
+      width: 60px;
+      height: 60px;
       background: none;
       border: none;
       cursor: pointer;
       transition: transform 0.3s ease-in-out;
     }
-
-    /* Hover Effect */
-    #askButton:hover {
-      transform: scale(1.1);
-    }
-
-    /* Click Animation */
-    #askButton:active {
-      transform: scale(1.3);
-    }
-
-    /* Chat Box Styling (Hidden Initially) */
+    #askButton:hover { transform: scale(1.1); }
+    #askButton:active { transform: scale(1.3); }
     #chatBox {
-      display: none; /* Initially Hidden */
+      display: none;
       position: fixed;
       bottom: 100px;
       right: 20px;
-      width: auto;
       max-width: 250px;
       padding: 10px;
       font-family: Arial, sans-serif;
       text-align: center;
     }
-
-    /* Chat Message Styling (No Background & Border Removed) */
-    .message {
-      font-size: 16px;
-      font-weight: bold;
-      color: black;
-    }
+    .message { font-size: 16px; font-weight: bold; color: black; }
   </style>
 </head>
 <body>
-
-  <!-- Voice Button Positioned in the Bottom-Right Corner -->
   <button id="askButton">
-    <img src="https://png.pngtree.com/png-vector/20220611/ourmid/pngtree-smiling-cute-robot-chat-bot-in-speech-bubble-png-image_5008700.png" alt="Ask Me Anything" width="60" height="60">
+    <img src="voicebot.png" alt="Ask Me Anything" width="60" height="60">
   </button>
-
-  <!-- Chat Box -->
   <div id="chatBox"></div>
 
   <script>
@@ -64,72 +42,80 @@
     const chatBox = document.getElementById("chatBox");
     const scriptId = window.location.pathname.split("/").pop();
 
-    async function handleSpeechProcess() {
-      chatBox.style.display = "block"; // Show chat box
+    askButton.addEventListener("click", startConversation);
 
-      // Show Greeting Message
-      chatBox.innerHTML = '<p class="message">Hi, how can I help you?</p>';
+    async function startConversation() {
+      speak("Greetings! How can I assist you today?");
+      chatBox.style.display = "block";
+      chatBox.innerHTML = '<p class="message">Greetings! How can I assist you today?</p>';
+      await wait(3000);
+      chatBox.innerHTML = '';
+      chatBox.style.display = "none";
+      await handleUserQuery();
+    }
 
-      // Speak Greeting
-      const greeting = new SpeechSynthesisUtterance("Hi, how can I help you?");
-      window.speechSynthesis.speak(greeting);
-
-      // Wait for greeting to finish
-      await new Promise(resolve => setTimeout(resolve, 3000));
-
-      // Hide chat box
+    async function handleUserQuery() {
+      const userInput = await getSpeechInput();
+      if (!userInput) return;
+      chatBox.style.display = "block";
+      chatBox.innerHTML = <p class="message">${userInput}</p>;
+      await wait(2000);
       chatBox.innerHTML = '';
       chatBox.style.display = "none";
 
-      const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
-      recognition.lang = "en-US";
+      const response = await fetch(/process-speech/${scriptId}, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ question: userInput }),
+      });
 
-      recognition.onresult = async (event) => {
-        const question = event.results[0][0].transcript;
-
-        // Show User's Question
+      const data = await response.json();
+      speak(data.answer);
+      chatBox.style.display = "block";
+      chatBox.innerHTML = <p class="message">${data.answer}</p>;
+      await wait(3000);
+      chatBox.innerHTML = '';
+      chatBox.style.display = "none";
+      
+      speak("Is there anything else?");
+      chatBox.style.display = "block";
+      chatBox.innerHTML = '<p class="message">Is there anything else?</p>';
+      await wait(3000);
+      chatBox.innerHTML = '';
+      chatBox.style.display = "none";
+      
+      const continueResponse = await getSpeechInput();
+      if (continueResponse.toLowerCase() === "yes") {
+        speak("Please ask your next question.");
+        await handleUserQuery();
+      } else {
+        speak("Thank you!");
         chatBox.style.display = "block";
-        chatBox.innerHTML = `<p class="message">${question}</p>`;
-
-        // Wait for 2 seconds before hiding the question
-        await new Promise(resolve => setTimeout(resolve, 2000));
+        chatBox.innerHTML = '<p class="message">Thank you!</p>';
+        await wait(2000);
         chatBox.innerHTML = '';
         chatBox.style.display = "none";
-
-        try {
-          const response = await fetch(`/process-speech/${scriptId}`, {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ question }),
-          });
-
-          const data = await response.json();
-          const answer = new SpeechSynthesisUtterance(data.answer);
-          window.speechSynthesis.speak(answer);
-
-          // Show AI Response
-          chatBox.style.display = "block";
-          chatBox.innerHTML = `<p class="message">${data.answer}</p>`;
-
-          // Wait for 7 seconds before hiding the response
-          await new Promise(resolve => setTimeout(resolve, 7000));
-          chatBox.innerHTML = '';
-          chatBox.style.display = "none";
-
-        } catch (error) { 
-          console.error("Error processing speech:", error);
-        }
-      };
-
-      recognition.onerror = (err) => {
-        console.error("Speech recognition error:", err);
-      };
-
-      recognition.start();
+      }
     }
 
-    askButton.addEventListener("click", handleSpeechProcess);
-  </script>
+    function speak(text) {
+      const utterance = new SpeechSynthesisUtterance(text);
+      window.speechSynthesis.speak(utterance);
+    }
 
+    function wait(ms) {
+      return new Promise(resolve => setTimeout(resolve, ms));
+    }
+
+    function getSpeechInput() {
+      return new Promise(resolve => {
+        const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
+        recognition.lang = "en-US";
+        recognition.onresult = event => resolve(event.results[0][0].transcript);
+        recognition.onerror = () => resolve("");
+        recognition.start();
+      });
+    }
+  </script>
 </body>
 </html>
