--- a/public/ask.html
+++ b/public/ask.html
@@ -75,14 +75,14 @@
         speak("Is there anything else?");
         chatBox.style.display = "block";
         chatBox.innerHTML = '<p class="message">Is there anything else?</p>';
-        await wait(1000);
+        // await wait(1000);
 
         const continueResponse = await getSpeechInput();
         if (continueResponse.toLowerCase().includes("yes")) {
           speak("How can I help you?");
           chatBox.style.display = "block";
           chatBox.innerHTML = '<p class="message">How can I help you?</p>';
-          await wait(1000);
+          // await wait(1000);
           chatBox.innerHTML = '';
           chatBox.style.display = "none";
         } else {
