--- a/public/ask.html
+++ b/public/ask.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -47,11 +46,10 @@
     async function handleSpeechProcess() {
       chatBox.style.display = "block";
       chatBox.innerHTML = '<p class="message">Hi, how can I help you?</p>';
-      speak("Hi, how can I help you?");
-      await wait(2000);
+      await speak("Hi, how can I help you?");
       chatBox.innerHTML = '';
       chatBox.style.display = "none";
-      
+
       while (true) {
         const userInput = await getSpeechInput();
         if (!userInput) continue;
@@ -66,30 +64,29 @@
         });
 
         const data = await response.json();
-        speak(data.answer);
         chatBox.innerHTML = `<p class="message">${data.answer}</p>`;
-        await wait(data.answer.length * 100);
+        await speak(data.answer);
         chatBox.innerHTML = '';
         chatBox.style.display = "none";
 
-        speak("Is there anything else?");
         chatBox.style.display = "block";
         chatBox.innerHTML = '<p class="message">Is there anything else?</p>';
-        // await wait(1000);
+        await speak("Is there anything else?");
+        chatBox.innerHTML = ''; // Remove "Is there anything else?" immediately
+        chatBox.style.display = "none";
 
         const continueResponse = await getSpeechInput();
         if (continueResponse.toLowerCase().includes("yes")) {
-          speak("How can I help you?");
           chatBox.style.display = "block";
           chatBox.innerHTML = '<p class="message">How can I help you?</p>';
-          // await wait(1000);
+          await speak("How can I help you?");
           chatBox.innerHTML = '';
           chatBox.style.display = "none";
         } else {
-          speak("Thank you");
           chatBox.style.display = "block";
           chatBox.innerHTML = '<p class="message">Thank you</p>';
-          await wait(1500);
+          await speak("Thank you");
+          await wait(500);
           chatBox.innerHTML = '';
           chatBox.style.display = "none";
           return;
@@ -116,7 +113,7 @@
         recognition.onresult = event => resolve(event.results[0][0].transcript);
         recognition.onerror = () => resolve("");
         recognition.start();
-      },1000);
+      });
     }
 
     askButton.addEventListener("click", handleSpeechProcess);
