--- a/public/ask.html
+++ b/public/ask.html
@@ -9,15 +9,16 @@
       position: fixed;
       bottom: 20px;
       right: 20px;
-      width: 60px;
-      height: 60px;
+      width: 70px;
+      height: 70px;
       background: none;
       border: none;
       cursor: pointer;
       transition: transform 0.3s ease-in-out;
     }
     #askButton:hover { transform: scale(1.1); }
-    #askButton:active { transform: scale(1.3); }
+    #askButton:active { transform: scale(1.2); }
+    
     #chatBox {
       display: none;
       position: fixed;
@@ -28,6 +29,10 @@
       padding: 10px;
       font-family: Arial, sans-serif;
       text-align: center;
+      background: white;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
     }
     .message { font-size: 16px; font-weight: bold; color: black; }
   </style>
@@ -46,73 +51,55 @@
     async function handleSpeechProcess() {
       chatBox.style.display = "block";
       chatBox.innerHTML = '<p class="message">Hi, how can I help you?</p>';
-      speak("Hi, how can I help you?");
-      await wait(2000);
-      chatBox.innerHTML = '';
+      await speak("Hi, how can I help you?");
       chatBox.style.display = "none";
-      
+
       while (true) {
         const userInput = await getSpeechInput();
         if (!userInput) continue;
 
         chatBox.style.display = "block";
-        chatBox.innerHTML = <p class="message">${userInput}</p>;
+        chatBox.innerHTML = `<p class="message">${userInput}</p>`;
 
-        const response = await fetch(/process-speech/${scriptId}, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ question: userInput }),
-        });
+        try {
+          const response = await fetch(`/process-speech/${scriptId}`, {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ question: userInput }),
+          });
 
-        const data = await response.json();
-        speak(data.answer);
-        chatBox.innerHTML = <p class="message">${data.answer}</p>;
-        await wait(data.answer.length * 100);
-        chatBox.innerHTML = '';
-        chatBox.style.display = "none";
+          const data = await response.json();
+          await speak(data.answer);
+          chatBox.innerHTML = `<p class="message">${data.answer}</p>`;
 
-        speak("Is there anything else?");
+          setTimeout(() => {
+            chatBox.innerHTML = '';
+            chatBox.style.display = "none";
+          }, 2000);
+        } catch (error) {
+          chatBox.innerHTML = '<p class="message">Error processing request.</p>';
+          await speak("Sorry, something went wrong.");
+          setTimeout(() => chatBox.style.display = "none", 2000);
+          return;
+        }
+
+        await speak("Is there anything else?");
         chatBox.style.display = "block";
         chatBox.innerHTML = '<p class="message">Is there anything else?</p>';
-        // await wait(1000);
 
-      //   const continueResponse = await getSpeechInput();
-      //   if (continueResponse.toLowerCase().includes("yes")) {
-      //     speak("How can I help you?");
-      //     chatBox.style.display = "block";
-      //     chatBox.innerHTML = '<p class="message">How can I help you?</p>';
-      //     // await wait(1000);
-      //     chatBox.innerHTML = '';
-      //     chatBox.style.display = "none";
-      //   } else {
-      //     speak("Thank you");
-      //     chatBox.style.display = "block";
-      //     chatBox.innerHTML = '<p class="message">Thank you</p>';
-      //     await wait(1500);
-      //     chatBox.innerHTML = '';
-      //     chatBox.style.display = "none";
-      //     return;
-      //   }
-      // }
         const continueResponse = await getSpeechInput();
         if (continueResponse.toLowerCase().includes("yes")) {
-          speak("How can I help you?"); // Speak immediately
-          chatBox.style.display = "block";
+          await speak("How can I help you?");
           chatBox.innerHTML = '<p class="message">How can I help you?</p>';
-          setTimeout(() => { 
-            chatBox.innerHTML = ''; 
-            chatBox.style.display = "none";
-          }, 1000); // Hide message after 1 second
+          setTimeout(() => chatBox.style.display = "none", 1000);
         } else {
-          speak("Thank you"); // Speak immediately
-          chatBox.style.display = "block";
-          chatBox.innerHTML = '<p class="message">Thank you</p>'
-            setTimeout(() => { 
-              chatBox.innerHTML = ''; 
-              chatBox.style.display = "none"; 
-            }, 1500); // Hide message after 1.5 seconds
+          await speak("Thank you");
+          chatBox.innerHTML = '<p class="message">Thank you</p>';
+          setTimeout(() => chatBox.style.display = "none", 1500);
+          return;
         }
       }
+    }
 
     function speak(text) {
       return new Promise(resolve => {
@@ -122,10 +109,6 @@
       });
     }
 
-    function wait(ms) {
-      return new Promise(resolve => setTimeout(resolve, ms));
-    }
-
     function getSpeechInput() {
       return new Promise(resolve => {
         const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
@@ -133,7 +116,7 @@
         recognition.onresult = event => resolve(event.results[0][0].transcript);
         recognition.onerror = () => resolve("");
         recognition.start();
-      },1000);
+      });
     }
 
     askButton.addEventListener("click", handleSpeechProcess);
