--- a/public/ask.html
+++ b/public/ask.html
@@ -34,7 +34,7 @@
 </head>
 <body>
   <button id="askButton">
-    <img src="https://gifsgratuits.fr/robot/robot7-(9).gif" alt="Ask Me Anything" width="80" height="80">
+    <img src="https://gifsgratuits.fr/robot/robot7-(9).gif" alt="Ask Me Anything" width="70" height="70">
   </button>
   <div id="chatBox"></div>
 
@@ -56,9 +56,9 @@
         if (!userInput) continue;
 
         chatBox.style.display = "block";
-        chatBox.innerHTML = <p class="message">${userInput}</p>;
+        chatBox.innerHTML = `<p class="message">${userInput}</p>`;
 
-        const response = await fetch(/process-speech/${scriptId}, {
+        const response = await fetch(`/process-speech/${scriptId}`, {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ question: userInput }),
@@ -66,7 +66,7 @@
 
         const data = await response.json();
         speak(data.answer);
-        chatBox.innerHTML = <p class="message">${data.answer}</p>;
+        chatBox.innerHTML = `<p class="message">${data.answer}</p>`;
         await wait(data.answer.length * 100);
         chatBox.innerHTML = '';
         chatBox.style.display = "none";
@@ -74,14 +74,14 @@
         speak("Is there anything else?");
         chatBox.style.display = "block";
         chatBox.innerHTML = '<p class="message">Is there anything else?</p>';
-        // await wait(1000);
+        await wait(3000);
 
         const continueResponse = await getSpeechInput();
         if (continueResponse.toLowerCase().includes("yes")) {
           speak("How can I help you?");
           chatBox.style.display = "block";
           chatBox.innerHTML = '<p class="message">How can I help you?</p>';
-          await wait(1000);
+          await wait(2000);
           chatBox.innerHTML = '';
           chatBox.style.display = "none";
         } else {
