--- a/public/ask.html
+++ b/public/ask.html
@@ -61,7 +61,7 @@
         const response = await fetch(/process-speech/${scriptId}, {
           method: "POST",
           headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ question: userInput },1000),
+          body: JSON.stringify({ question: userInput },),
           
         });
 
