--- a/public/ask.html
+++ b/public/ask.html
@@ -34,7 +34,7 @@
 </head>
 <body>
   <button id="askButton">
-    <img src="https://gifsgratuits.fr/robot/robot7-(9).gif" alt="Ask Me Anything" width="70" height="70">
+    <img src="robot1.gif" alt="Ask Me Anything" width="70" height="70">
   </button>
   <div id="chatBox"></div>
 
