--- a/public/ask.html
+++ b/public/ask.html
@@ -34,7 +34,7 @@
 </head>
 <body>
   <button id="askButton">
-    <img src="robot1.gif" alt="Ask Me Anything" width="70" height="70">
+    <img src="https://www.sapphireinfocom.com/images/robot1.gif" alt="Ask Me Anything" width="80" height="80">
   </button>
   <div id="chatBox"></div>
 
@@ -74,7 +74,7 @@
         speak("Is there anything else?");
         chatBox.style.display = "block";
         chatBox.innerHTML = '<p class="message">Is there anything else?</p>';
-        await wait(3000);
+        await wait(1000);
 
         const continueResponse = await getSpeechInput();
         if (continueResponse.toLowerCase().includes("yes")) {
