--- a/public/ask.html
+++ b/public/ask.html
@@ -48,6 +48,11 @@
       box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
       display: none;
     }
+    .message {
+      font-size: 16px;
+      font-weight: bold;
+      color: white;
+    }
   </style>
 </head>
 <body>
