--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,12 @@
   <!-- <h1>Dynamic Voice Q&A System</h1> -->
 
   <!-- Upload Form -->
-  <form id="uploadForm">
+  <form id="uploadForm">  
+    <label for="clientName">Client Name:</label>
+    <input type="text" id="clientName" name="clientName" placeholder="Enter client name" required />
+    <br><br>
+
+
     <label for="fileInput">Upload Excel File:</label>
     <input type="file" id="fileInput" name="file" accept=".xlsx, .xls" required />
     <button type="submit">Upload</button>
@@ -21,6 +26,9 @@
 
   <!-- Ask Me Anything Button -->
   <button id="askButton" style="display: none;">Ask Me Anything</button>
+
+  <button onclick="window.location.href='scripts.html'">View Uploaded Scripts</button>
+
 
   <!-- JavaScript -->
   <script src="script.js"></script>
